UI improvements: - introduce max results (passed over to fasta36), result sorting and clear-input button - results list is now shown via BootsFaces panels

--- a/ui/src/main/webapp/resources/css/styles.css
+++ b/ui/src/main/webapp/resources/css/styles.css
@@ -1,4 +1,3 @@
-/* overrides PrimeFaces style */
-.ui-accordion .ui-accordion-header .ui-icon {
-	display: inline;
+.fastaResultPanel > .panel-group {
+	margin-bottom: 0px;
 }
